Started UI overhaul (far from done), added wallet address nicknames, started basic themes backend.
Known issues include a few boxes on the send tab not scaling properly on window resize, progress bar sitting just below 100%, block height showing as 1 over with new wallets and resyncs.

Menu overhaul is basically done, wallet tab is being worked on, and the rest have not been started beyond minor tweaks to work with the new layout. Back end *should* still be working as intended, but I did do some small code tweaks with address info, although that shouldn't affect any functionality.

--- a/Shell Wallet/MainWindow.resx
+++ b/Shell Wallet/MainWindow.resx
@@ -169,6 +169,14 @@
     <value>717, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="SendTabIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAAd0SU1FB+IDFxMzEOqKbaIAAABhSURBVDhPxYxRCoAwDEN3/0vXddgIMXEWPxQe
+        hrekIyI+IWUHKTtIycxv/sybkkwecEeucJZ2VB87BCo+UZu1Q6DSjn8P1GbtEKjkqD52LBRunNyEwo0T
+        KTtI2UHK98Q4AOJ6ba/VC3l9AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
