--- a/Shell Wallet/Properties/Resources.resx
+++ b/Shell Wallet/Properties/Resources.resx
@@ -118,32 +118,44 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SendBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SendIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TransactionLogBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AddressBookIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="TurtlecoinLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\407289344613810218.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="OptionsBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\OptionsIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LockedBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LockedIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="OptionsWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OptionsWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="LoadingIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TransactionLogBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AddressBookIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WalletWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WalletWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AddressBookBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AddressIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LockedBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LockedIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NetworkWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NetworkWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ShellBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ShellBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="NetworkBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NetworkIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TransactionLogWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TransactionLogWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="WalletBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WalletIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="AddressBookBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AddressIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="OptionsBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OptionsIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AddressBookWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AddressBookWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -151,19 +163,13 @@
   <data name="LockedWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LockedWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="NetworkWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NetworkWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="OptionsWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\OptionsWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="SendWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SendWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="TransactionLogWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TransactionLogWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SendBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SendIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="WalletWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\WalletWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Clipboard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Clipboard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
